infra/k8s/prod/08-frontend/service-frontend-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
