infra/k8s/prod/08-frontend/ingress-frontend-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.hadi-polyai.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
